# delfi-trading-engine

./: .env.example  .gitignore  README.md  config.json.example  implementation_plan.md  optimized_strategy.md  pyproject.toml  setup.sh  start.sh  tech_stack.md  trading_algo.txt
aggregator/: Cargo.toml
aggregator/src/: main.rs
src/: engine.py  main.py
src/backtester/: backtester.py
src/brokers/: alpaca_broker.py  base_broker.py  shadow_broker.py  simulated_broker.py
src/cli/: __init__.py  configured.py  interactive.py
src/config/: broker_config.py  config.py  data_provider_config.py  strategy_config.py
src/data_providers/: alpaca_data_provider.py  base_data_provider.py  redis_data_provider.py
src/strategies/: base_strategy.py  high_edge.py
src/strategies/ema_crossover/: params.py  strategy.py
src/strategies/high_edge/: params.py  strategy.py
