[package]
name = "bar_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23.3", features = ["aio", "tokio-comp"] }
chrono = "0.4"
clap = { version = "4.5.2", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"

# Add any additional crates as needed 